Prevent overflow onto background with small screens

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -212,6 +212,7 @@
  */
 .page-content {
     padding: $spacing-unit 0;
+    overflow-x: auto;
     // text-align: justify;
 
    	@include shadow-box;
